--- a/web/package.json
+++ b/web/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.3.14",
-    "@electric-sql/pglite-react": "^0.2.32",
+    "@electric-sql/pglite": "0.3.14",
+    "@electric-sql/pglite-react": "0.2.32",
+    "@hookform/resolvers": "^5.2.2",
     "@mantine/core": "8.3.6",
+    "@mantine/dates": "^8.3.7",
     "@mantine/hooks": "8.3.6",
-    "@tabler/icons-react": "^3.35.0",
+    "@tabler/icons-react": "3.35.0",
     "@tanstack/react-query": "5.90.7",
     "@tanstack/react-query-devtools": "5.90.2",
     "@tanstack/react-router": "1.134.15",
     "@tanstack/router-plugin": "1.134.15",
+    "dayjs": "^1.11.19",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "redaxios": "0.5.1",
+    "react-hook-form": "7.66.0",
+    "uuid": "^13.0.0",
     "zod": "4.1.12"
   },
   "devDependencies": {
@@ -36,6 +40,6 @@
     "postcss-preset-mantine": "1.18.0",
     "postcss-simple-vars": "7.0.1",
     "vite": "npm:rolldown-vite@7.2.2",
-    "vite-plugin-pwa": "^1.1.0"
+    "vite-plugin-pwa": "1.1.0"
   }
 }
